--- a/front-end-mean/angular.json
+++ b/front-end-mean/angular.json
@@ -25,15 +25,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "src/assets/css/style.css",
-              "src/assets/vendor/bootstrap/css/bootstrap.min.css",
-              "src/assets/vendor/bootstrap-icons/bootstrap-icons.css",
-              "src/assets/vendor/boxicons/css/boxicons.min.css",
-              "src/assets/vendor/quill/quill.snow.css",
-              "src/assets/vendor/quill/quill.bubble.css",
-              "src/assets/vendor/remixicon/remixicon.css",
-              "src/assets/vendor/simple-datatables/style.css"
+              "src/styles.css"
             ],
             "scripts": [
               "src/assets/vendor/apexcharts/apexcharts.min.js",
