--- a/front-end-mean/angular.json
+++ b/front-end-mean/angular.json
@@ -34,7 +34,8 @@
               "src/assets/dist/css/adminlte.min.css",
               "src/assets/plugins/overlayScrollbars/css/OverlayScrollbars.min.css",
               "src/assets/plugins/daterangepicker/daterangepicker.css",
-              "src/assets/plugins/summernote/summernote-bs4.min.css"
+              "src/assets/plugins/summernote/summernote-bs4.min.css",
+              "node_modules/datatables.net-dt/css/jquery.dataTables.min.css"
             ],
             "scripts": [
               "src/assets/plugins/jquery/jquery.min.js",
@@ -52,7 +53,9 @@
               "src/assets/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js",
               "src/assets/dist/js/adminlte.js",
               "src/assets/dist/js/demo.js",
-              "src/assets/dist/js/pages/dashboard.js"
+              "src/assets/dist/js/pages/dashboard.js",
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/datatables.net/js/jquery.dataTables.min.js"
             ]
           },
           "configurations": {
@@ -112,8 +115,7 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-            ],
+            "styles": [],
             "scripts": []
           }
         }
