--- a/front-end-mean/package.json
+++ b/front-end-mean/package.json
@@ -23,6 +23,7 @@
     "angular-datatables": "^17.0.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.2",
     "datatables.net": "^1.11.3",
     "datatables.net-dt": "^1.11.3",
     "jquery": "^3.7.1",
